# qoco

./: .buildinfo  .buildinfo.bak  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  DEVELOPER_GUIDE.md  Doxyfile  FAILURES.md  README.md  README_cuDSS.md  RELEASE.md  ROBUSTNESS_NOTES.md  batch_cudss_benchmark_findings.md  call_grind.txt  genindex.html  index.html  log.txt  objects.inv  profile_report_100k.txt  search.html  searchindex.js
.github/workflows/: benchmark_regression.yml  clang_format.yml  clang_tidy.yml  docs.yml  unit_tests.yml
_sources/: index.rst.txt
_sources/codegen/: installation.rst.txt
_sources/contributing/: index.rst.txt
_sources/examples/: simple_example.rst.txt
_sources/install/: index.rst.txt  matlab.rst.txt
_sources/parsers/: cvxpygen.rst.txt  index.rst.txt
_sources/qoco/: index.rst.txt
_sources/qocogen/: cvxpygen.rst.txt
algebra/: CMakeLists.txt  backend.h
algebra/builtin/: CMakeLists.txt  builtin_linalg.c  builtin_types.h  qdldl_backend.c  qdldl_backend.h
algebra/cuda/: CMakeLists.txt  cuda_linalg.cu  cuda_types.h  cudss_backend.cu  cudss_backend.h
algebra/qdldl/: CMakeLists.txt  qdldl_backend.c  qdldl_backend.h
api/: C.html  exit.html  index.html  interfaces.html  matlab.html  python.html  settings.html
benchmarks/: README.md  benchmark_runner.c  compute_performance_profiles.py  dump.py  gbenchmark_runner.cpp  pdg_batch_compare.cpp  regression_report.py  run_benchmarks.py  run_comparison.py
benchmarks/configs/: branch.yml  main.yml
benchmarks/utils/: experiment.py  regression_report.py  run_benchmarks.py
ci/: run_tests.sh
citing/: index.html
codegen/: api.html  build.html  calling.html  generate.html  index.html  installation.html
configure/: qoco_config.h.in
contributing/: developer_guide.html  index.html
devtools/: profile.sh  profile_gpu.sh  run_clang_format.sh  run_clang_tidy.sh  run_tests.sh  run_tests_gpu.sh
docs/: conf.py  index.rst
docs/api/: C.rst  compiler_flags.rst  exit.rst  index.rst  interfaces.rst  python.rst
docs/citing/: index.rst
docs/codegen/: api.rst  build.rst  generate.rst  index.rst
docs/contributing/: developer_guide.rst  index.rst
docs/examples/: lcvx.rst
docs/html/: annotated.html  classes.html  common__linalg_8c.html  common__linalg_8c__incl.map  common__linalg_8c__incl.md5  common__linalg_8h.html  common__linalg_8h__dep__incl.map  common__linalg_8h__dep__incl.md5  common__linalg_8h__incl.map  common__linalg_8h__incl.md5  common__linalg_8h_source.html  cone_8c.html  cone_8c__incl.map  cone_8c__incl.md5  cone_8h.html  cone_8h__dep__incl.map  cone_8h__dep__incl.md5  cone_8h__incl.map  cone_8h__incl.md5  cone_8h_source.html  definitions_8h.html  definitions_8h__dep__incl.map  definitions_8h__dep__incl.md5  definitions_8h__incl.map  definitions_8h__incl.md5  definitions_8h_source.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  enums_8h.html  enums_8h__dep__incl.map  enums_8h__dep__incl.md5  enums_8h_source.html  equilibration_8c.html  equilibration_8c__incl.map  equilibration_8c__incl.md5  equilibration_8h.html  equilibration_8h__dep__incl.map  equilibration_8h__dep__incl.md5  (+135 more)
docs/install/: C.rst  index.rst  python.rst
docs/latex/: annotated.tex  common__linalg_8c.tex  common__linalg_8c__incl.md5  common__linalg_8h.tex  common__linalg_8h__dep__incl.md5  common__linalg_8h__incl.md5  common__linalg_8h_source.tex  cone_8c.tex  cone_8c__incl.md5  cone_8h.tex  cone_8h__dep__incl.md5  cone_8h__incl.md5  cone_8h_source.tex  definitions_8h.tex  definitions_8h__dep__incl.md5  definitions_8h__incl.md5  definitions_8h_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  enums_8h.tex  enums_8h__dep__incl.md5  enums_8h_source.tex  equilibration_8c.tex  equilibration_8c__incl.md5  equilibration_8h.tex  equilibration_8h__dep__incl.md5  equilibration_8h__incl.md5  equilibration_8h_source.tex  files.tex  input__validation_8c.tex  input__validation_8c__incl.md5  input__validation_8h.tex  input__validation_8h__dep__incl.md5  input__validation_8h__incl.md5  input__validation_8h_source.tex  kkt_8c.tex  kkt_8c__incl.md5  kkt_8h.tex  kkt_8h__dep__incl.md5  (+64 more)
docs/qoco/: cvxpy.rst
examples/: index.html  lcvx.html  qcos_demo.c  qoco_demo.c  simple_example.html
include/: common_linalg.h  cone.h  definitions.h  enums.h  equilibration.h  error.h  input_validation.h  kkt.h  linalg.h  linsys.h  qcos.h  qcos_api.h  qcos_error.h  qoco.h  qoco_api.h  qoco_batch.h  qoco_linalg.h  qoco_utils.h  structs.h  timer.h  utils.h  validation.h
install/: C.html  index.html  matlab.html  python.html
old_tests/: csc.jl  test.c  test_qdldl.c
parsers/: cvxpy.html  cvxpygen.html  index.html
qoco/: cvxpy.html  index.html
qocogen/: api.html  build.html  calling.html  cvxpygen.html  generate.html  index.html  installation.html
src/: common_linalg.c  cone.c  cone.cu  equilibration.c  input_validation.c  kkt.c  linalg.c  qcos_api.c  qcos_error.c  qoco_api.c  qoco_batch.c  qoco_linalg.c  qoco_status.c  qoco_utils.c  timer.c  timer_fallback.c  timer_linux.c  timer_macos.c  timer_windows.c  utils.c  validation.c
tests/: CMakeLists.txt  csc.jl  generate_all_problem_data.py  qcos_test.cpp  test.c  test_qdldl.c  test_utils.cpp  test_utils.h
tests/convex_tests/: missing_constraints_test.cpp  qcos_test.cpp  simple_socp_test.cpp
tests/ocp/: double_integrator_test.cpp  generate_problem_data.py  lcvx_bad_scaling_test.cpp  lcvx_test.cpp  pdg_cvxpy_test.cpp  pdg_test.cpp
tests/portfolio/: generate_problem_data.py  markowitz_cvxpy_test.cpp  markowitz_test.cpp
tests/simple_tests/: cvxpy_conic_tests.cpp  cvxpy_lp5_test.cpp  missing_constraints_test.cpp  simple_socp_test.cpp
tests/unit_tests/: batch_test.cpp  cone_test.cpp  input_validation_test.cpp  kkt_test.cpp  linalg_test.cpp  precision_test.cpp  x0_test.cpp
tests/utils/: codegen_functions.py  cvxpy_to_qcos.py  test_utils.cpp  test_utils.h
(+499 files in other folders)
